Prolonged pre-shutdown time for Joctronic so NVRAM is saved correctly
Found general tilt sense on LTD system 4
Added light chaser outputs for Hook (exactly the same as on Star Trek 25th Anniversary)
Prevented credits from being added repeatedly on Spain 82

*** ROM SUPPORT *** Thanks to Brent Walker, inkochnito, ipdb.org, Victor Fernandez (City Game), StrangeLeo75, Flipprojets.fr, Clay Harrell, watacaractr, Eduardo Anay, Toussu
New:
Alvin G.: U.S.A. Football (Redemption, P08)
Joctronic: Pin Ball

Correct Dumps:
Come Back
Jurassic Park 3.05 (using display 4.00 from version 3.07 now)
Mac Attack
Riverboat Gambler PA-7 (using L-1 sound now, might still be too new, but better than L-2 anyhow)
Tales of the Arabian Nights 0.4 Prototype (see above)

Clones:
A.G. Soccer-Ball & Football R18u with 2.5L Sound (only the latter is new, 2.4 revision, inside the ROM it says 2.5L though)
Bad Cats LG-4
Bushido (alternate set B)
Cheech & Chong: Road-Trip'pin (Harley-Davidson unofficial MOD)
Flintstones, The LA-5
Hardbody (rev. D) (the newest we have, only a few diagnostic lamp / switch names were corrected compared to rev. C)
Hook 4.06 English
Jurassic Park 3.07
Lucky Draw (alternate version - only difference is the #3 ROM)
Mach 2 (alternate set)
Monte Carlo (French Millions option, Free Play)
Monte Carlo (German Millions option, Free Play)
Monte Carlo (rev. 2 Millions option, Free Play)
MotorDome (rev. B)
No Fear 0.8X with SL-1 Sound
Theatre of Magic 1.2A
Waterworld (rev. 5) (which makes this the newest we have :))



Version 3.3 (December 24th, 2020) - "20 years already?"
------------------------------------------------------------------------------

Compiling for mac/iOS is now possible.
Also a new platform independent lib/dll is now available with a new, simple interface to request (some of) the internal data.
Fix -listxml for strings that contain embedded tags

pinPROC : updated library;  VS2019 build
YAML-cpp: updated to 0.6.3; VS2019 build
