@@ -975,7 +975,8 @@ DRIVERNV(jpinball)      //Pin Ball (198?)
 DRIVERNV(petaco  )      //1101  - Petaco (1984)
 DRIVERNV(petacon )      //1102? - Petaco (1985, using the new hardware)
 DRIVERNV(petacona)      //        Petaco (new hardware, alternate version)
-DRIVERNV(faeton  )      //1103  - Faeton (1985)
+DRIVERNV(faeton6d)      //1103  - Faeton (1985, 6 digits)
+DRIVERNV(faeton  )      //        Faeton (7 digits)
 DRIVERNV(halley  )      //1104  - Halley Comet (1986)
 DRIVERNV(halleya )      //        Halley Comet (alternate version)
 DRIVERNV(aqualand)      //1105  - Aqualand (1986)
